--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -2,11 +2,11 @@
 
 .reveal .slides {
   line-height: 1; /* reduce distance between lines*/
-  height: 100% !important;
-  top: 0 !important;
+  height: 94% !important;
+  top: 3% !important;
   margin-top: 0 !important;
-  width: 90% !important;
-  left: 5%;
+  width: 94% !important;
+  left: 3%; !important;
   margin-left: 0;
   font-weight: inherit;
 }
